# CUDA-Inference

./: CMakeLists.txt  CNN.cu  CNN.h  CNN.py  CNN_tests.cu  MLP.py  MLP_test.cu  README.md  TODO.md  basic_operations_test.cu  conv_layer_tests.cu  convolutions.cu  convolutions.h  convolutions_test.cu  cpu_operations.cpp  cpu_operations.h  error_utils.cu  error_utils.h  gen_proto_files.sh  inference_cnn_cuda.cu  inference_cuda.cu  load_onnx.cpp  load_onnx.h  main.cu  matrix_operations.cu  matrix_operations.h  mlp.cu  mlp.h  requirements.txt
src/: inference_cnn_cuda.cu  inference_cuda.cu  main.cu
src/models/: CNN.cu  CNN.h  mlp.cu
src/operations/: convolutions.h  matrix_operations.cu  matrix_operations.h
src/utils/: load_onnx.cpp  load_onnx.h
src/utils/proto/: onnx.pb.cc  onnx.pb.h
tests/: CNN_tests.cu  MLP_test.cu  basic_operations_test.cu  conv_layer_tests.cu  convolutions_test.cu
